* Players protected by spawn invulnerability are now able to acquire an invulnerability powerup, which will upgrade their invulnerability time from the 0.5-4.0 seconds of spawn invulnerability to the full 30 seconds of an invulnerability powerup.  Previously, a player protected by spawn invulnerability was not allowed to acquire an invulnerability powerup and instead received the error "You already are Invulnerable!"; players protected by an invulnerability powerup are still prohibited from collecting a new one until the old one runs out.
* Drastically improved positional accuracy and less latency in Multiplayer games.
* Revamped powerup management in Multiplayer which properly handles and prevents loss and excess of powerups.
* Important packets in Multiplayer are handled in proper order, fixing a multitude of packet-loss related issues.
* A plethora of new Multiplayer options. [Thanks to the Retro team, A Future Pilot and many more]
* Proper chaff effect for bombs in D2X-Rebirth Multiplayer as intended in the original game but never implemented correctly.
* Headlights on player ships will now properly render according to headlight state of the player.
* "Bright Players" Multiplayer option will now only affect players instead of all polygon models.
* Improved thief bot to (hopefully) work more accurate in Multiplayer.
* New Multiplayer GAME INFO screen that can be toggled ingame, too.
* Proximity Bomb spin variance logic now applies also to Smart Mines and pre-placed mines.
* Hoard mode no longer borrows the Proximity Bomb slot for counting player orbs; Proximity Bomb powerups can now be found and used correctly in Hoard mode.
* Fixed some Multiplayer scoring oddities.
* New SP (Options->Gameplay) / MP (Host Game -> Game Setup -> Advanced) options to remove the thief during level load and to restore the thief energy weapon bug.