@@ -46,6 +46,7 @@ What's new in 0.60
 * In multiplayer anarchy games, the host can now configure the game to prefer to spawn players at sites farther from the currently live players (Github issue #108).
 * In multiplayer games, the host can now choose to duplicate preplaced primary weapons, secondary weapons, or powerups.
 * Added experimental support for uncapped ship turning (yawing, pitching, and rolling), popularly known as mouselook.  This is runtime-disabled by default.  Players who wish to use it must enable it in Options -> Controls under the heading "Uncapped Turning In:".  Separate knobs are provided for single player, multiplayer cooperative, and multiplayer anarchy.  For multiplayer games, mouselook must also be enabled by the host in "Game Setup" -> "Advanced Netgame Options" -> "Misc. Options" as "Allow coop mouselook" or "Allow anarchy mouselook", depending on game type.  For this feature, any multiplayer game other than cooperative is considered anarchy: "Anarchy", "Team Anarchy", "Robo-Anarchy", "Capture the Flag", and "Hoard", and "Bounty" are all grouped as "anarchy" since all those modes are competitive against other players.  If the host does not enable mouselook in the game setup menu, no players in that game will be permitted to use mouselook.  A host may permit mouselook for guests while keeping its own controls set to non-mouselook mode.  Although the feature is popularly known as mouselook, the implementation controls turning for all input types: keyboard, mouse, and joystick.
+* Added experimental briefing directive to show Descent 1 style rotating robots, rather than Descent 2 style robot movies.  Invoke with a line consisting solely of "$:Rebirth.rotate.robot N" or "$:$F:Rebirth.rotate.robot N" where N is the decimal index of the robot to show, and all other characters must be present as shown.  The first form is visible to legacy clients.  The second form abuses a parsing defect in legacy clients to hide the unknown directive, at the expense of toggling the blinking cursor.  Use a regular "$F" on an adjacent line to reverse the toggle.
 * Players protected by spawn invulnerability are now able to acquire an invulnerability powerup, which will upgrade their invulnerability time from the 0.5-4.0 seconds of spawn invulnerability to the full 30 seconds of an invulnerability powerup.  Previously, a player protected by spawn invulnerability was not allowed to acquire an invulnerability powerup and instead received the error "You already are Invulnerable!"; players protected by an invulnerability powerup are still prohibited from collecting a new one until the old one runs out.
 * Drastically improved positional accuracy and less latency in Multiplayer games.
 * Revamped powerup management in Multiplayer which properly handles and prevents loss and excess of powerups.
